<resources>
    <string name="app_name">CommunityHealth</string>
    <string name="button_addPatient">Add Patient</string>
    <string name="hint_patientMRN">Patient Medical Record Number</string>
    <string name="hint_patientLastName">Last Name </string>
    <string name="hint_patientFirstName">First Name </string>
    <string name="menu_addPatient">Add Patient</string>
    <string name="menu_cancelPatient">Cancel</string>
    <string name="enter_patient_MRN"> Please enter a Patient MRN</string>
    <string name="save_patient"> Save Patient Details </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_patient_image">Select patient image</string>
    <string name="change_patient_image">Change patient image</string>
    <string name="button_location">Set Patient Address</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePatient">Delete Patient</string>
    <string name="title_activity_patient_maps">Community Health Patients Map</string>
    <string name="menu_savePatient">Save</string>
    <string name="app_logo_description">CommuiHealth</string>

</resources>